--- a/index.html
+++ b/index.html
@@ -208,6 +208,23 @@
                 font-size: 1.8em !important;
                 margin: 5px 0 !important;
             }
+
+            /* Search bar and Tiktok responsive adjustments */
+            div[style*="margin-bottom: 30px; margin-top: 80px"] {
+                flex-direction: column !important;
+                gap: 15px !important;
+            }
+
+            div[style*="margin-bottom: 30px; margin-top: 80px"] input {
+                width: 250px !important;
+                font-size: 14px !important;
+                padding: 10px 40px 10px 12px !important;
+            }
+
+            div[style*="margin-bottom: 30px; margin-top: 80px"] p {
+                font-size: 1em !important;
+                padding: 8px 16px !important;
+            }
         }
 
         @media (max-width: 480px) {
