--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
             div[style*="margin-bottom: 30px; margin-top: 80px"] {
                 flex-direction: column !important;
                 gap: 15px !important;
+                margin-top: 40px !important;
             }
 
             div[style*="margin-bottom: 30px; margin-top: 80px"] input {
