--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
                 flex-direction: column !important;
                 gap: 15px !important;
                 margin-top: 40px !important;
+                margin-bottom: 15px !important;
             }
 
             div[style*="margin-bottom: 30px; margin-top: 80px"] input {
